tests/ui/consts/const-eval/stable-metric/ctfe-recursion.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ctfe-recursion.rs:8:9
   |
LL |         recurse(n - 1)
   |         ^^^^^^^^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)
   |
note: inside `recurse`
  --> $DIR/ctfe-recursion.rs:8:9
   |
LL |         recurse(n - 1)
   |         ^^^^^^^^^^^^^^
note: [... 18 additional calls inside `recurse` ...]
  --> $DIR/ctfe-recursion.rs:8:9
   |
LL |         recurse(n - 1)
   |         ^^^^^^^^^^^^^^
note: inside `X`
  --> $DIR/ctfe-recursion.rs:12:16
   |
LL | const X: u32 = recurse(19);
   |                ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
